syntax = "proto3";

package heron.proto.stmgr;

option java_package = "com.twitter.heron.proto.stmgr";
option java_outer_classname = "StreamManager";

import "common.proto";
import "physical_plan.proto";
import "tuple.proto";

//
// Messages sent by topologymaster
//

message NewPhysicalPlanMessage {
  heron.proto.system.PhysicalPlan new_pplan = 1;
}

//
// Request/Responses by the instance
//
message RegisterInstanceRequest {
  // Information about the instance registering with us
  heron.proto.system.Instance instance = 1;
  string topology_name = 2;
  string topology_id = 3;
}

message RegisterInstanceResponse {
  heron.proto.system.Status status = 1;

  // If the assignment is known, send it
  heron.proto.system.PhysicalPlan pplan = 2;
}

message NewInstanceAssignmentMessage {
  heron.proto.system.PhysicalPlan pplan = 1;
}

// Tuples exchanged between stream managers and instances
message TupleMessage {
  heron.proto.system.HeronTupleSet set = 1;
}

// messages exchanged between stream managers
message StrMgrHelloRequest {
  string topology_name = 1;
  string topology_id = 2;
  string stmgr = 3;
}

message StrMgrHelloResponse {
  heron.proto.system.Status status = 1;
}

// Tuples exchanged between stream managers
message TupleStreamMessage {
  int32 task_id = 1;
  heron.proto.system.HeronTupleSet set = 2;
}

message StartBackPressureMessage {
  string topology_name = 1;
  string topology_id = 2;
  string stmgr = 3;
  string message_id = 4;
}

message StopBackPressureMessage {
  string topology_name = 1;
  string topology_id = 2;
  string stmgr = 3;
  string message_id = 4;
}
